[tool.poetry]
name = "quke"
version = "0.5.1"
description = "Compare the answering capabilities of different LLMs - for example LlaMa, ChatGPT, Cohere, Falcon - against user provided document(s) and questions."
authors = ["Erik Oosterop"]
maintainers = ["Erik Oosterop"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/EJOOSTEROP/quke"
repository = "https://github.com/EJOOSTEROP/quke"
documentation = "https://github.com/EJOOSTEROP/quke"
keywords = ["ML", "LLM", "compare", "chat", "semantic search"]


[tool.poetry.scripts]
quke = "quke.quke:quke"

[tool.poetry.dependencies]
python = "^3.11"
lark = "^1.1.7"
rich = "^13.5.2"
pymupdf = "^1.24.9"
langchain-community = "^0.2.10"
langchain-core = "^0.2.25"
jinja2 = "^3.1.4"
python-dotenv = "^1.0.1"
hydra-core = "^1.3.2"
langchain-chroma = "^0.1.2"
langchain-openai = "^0.1.19"
sentence-transformers = "^3.0.1"
langchain-huggingface = "^0.0.3"
langchain-cohere = "^0.1.9"
replicate = "^0.30.1"
langchain-google-genai = "^1.0.8"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pytest = "^7.4.0"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "expensive: uses API key and likely paid or at least limited resources (deselect with '-m \"not expensive\"')",
    "serial",
]

[tool.ruff]
include = ["*.py", "*.pyi", "**/pyproject.toml"]
line-length = 119
select = [  # https://beta.ruff.rs/docs/rules/
    "A",  # prevent using keywords that clobber python builtins
    "ANN",  # type annotation
    "ARG",  # unused arguments
    "B",  # bugbear: security warnings
    # "BLE",  # blind exceptions
    "C",
    # "COM",  # commas
    "C4",  # comprehension
    "C90",  # McCabe complexity
    "D",  # pydocstyle
    # "DAR", # darglint, but does not seem to be implemented at the moment
    "DTZ",  # date timezone
    "E",  # pycodestyle
    "EM",  # error messages
    "ERA",  # eradicate
    "EXE",  # executables
    "F",  # pyflakes
    "FLY",  # f-strings
    # "G",  # logging format (no f-string)
    "I",  # isort
    "ICN",  # import conventions
    "INT",  # gettext
    "ISC",  # implicit string concatenation
    "N",  # pep8 naming
    "PERF",  # performance lint
    "PIE",  #
    "PT",  # pytest style
    "PTH",  # use pathlib
    "Q",  # quotes
    "RET",  # return values
    "RSE",  # error parenthesis
    "RUF",  # ruff rules
    "S",  # Bandit
    "SIM",  # simplify
    "TCH",  # type checking
    # "TD",  # TODO
    "TID",  # tidy imports
    "TRY",  # tryceratops
    "T20",  # print statement
    "UP",  # alert you when better syntax is available in your python version
    "W",  # pycodestyle warnings
    "RUF",  # the ruff developer's own rules
]

ignore = [
    "E203",  # comments allowed
    "E501",
    "ANN101", # type annotation for self
]

# fixing is off by default
fix = true
fixable = [
    "F401",  # Remove unused imports.
    "NPY001",  # Fix numpy types, which are removed in 1.24.
    "RUF100",  # Remove unused noqa comments.
    "I",  # Fix import order
    "PTH",  # Path.cwd()
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    # at least these three should be fine in tests:
    "S101", # asserts allowed in tests...
    "ANN",  # TODO: do not care about type annotations in tests for now
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # The below are debateable
    "PLR2004", # Magic value used in comparison, ...
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
    "D",  # no pydocstyle
    "N",  # Argument, function to lowercase
]

"noxfile.py" = [
    "ANN",
    "D",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
disallow_incomplete_defs = true
